--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 RMQ_URL=amqps://jmhfolqf:UZohSib7oNUlsxLlDZqg3jAqF6bjmAsR@rattlesnake.rmq.cloudamqp.com/jmhfolqf
+SMTP_USER=ifeanyichukwuadams@outlook.com
+SMTP_PASS=Ifeanyichukwuk
