Sent email when user registers

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 RMQ_URL=amqps://jmhfolqf:UZohSib7oNUlsxLlDZqg3jAqF6bjmAsR@rattlesnake.rmq.cloudamqp.com/jmhfolqf
 SMTP_USER=ifeanyichukwuadams@outlook.com
 SMTP_PASS=Ifeanyichukwuk
+Access_Key_ID=AKIAZ4V3ZWHCMQD5WSU6
+Secret_Access_Key=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
+Region=us-east-1
