--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "amqp-connection-manager": "^4.1.3",
     "amqplib": "^0.10.0",
+    "aws-sdk": "^2.1166.0",
+    "node-mailjet": "^5.0.1",
     "nodemailer": "^6.7.5",
     "nodemailer-html-to-text": "^3.2.0",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +43,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
+    "@types/node-mailjet": "^3.3.9",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
