--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "amqp-connection-manager": "^4.1.3",
     "amqplib": "^0.10.0",
     "aws-sdk": "^2.1166.0",
+    "dotenv": "^16.0.1",
     "node-mailjet": "^5.0.1",
     "nodemailer": "^6.7.5",
     "nodemailer-html-to-text": "^3.2.0",
